refactor(cursor): 优化游标分页逻辑并改进JSON脱敏实现
- 重构 CursorPagination 类中的游标生成逻辑，明确区分首页、向后翻页和向前翻页三种情况
-修复 ImmutableCursorPagination 中 hasPrev 和 hasNext 方法的序列化问题，添加 JsonProperty 注解
- 替换 JSON 处理库，使用 Jayway JsonPath 替代 FastJSON2，提升灵活性和容错性
- 增加对非法 JSON 输入的安全处理，避免解析异常导致程序中断
- 更新 JSON 路径缓存策略，延长缓存时间并增强配置选项- 在测试类中将 get(0) 修改为 getFirst()，提高代码可读性和安全性
- 添加必要的依赖项：Jackson Annotations 和 Jayway JsonPath